# DarkArtOD

darkart/: CMakeLists.txt
darkart/ArtModules/: CMakeLists.txt  ProtoVetoMerger_module.cc  V1190SimulationProducer_module.cc  VetoAnalyzer_module.cc  VetoMapping.hh  VetoPMT.hh  VetoPMT_service.cc
darkart/ConvertToGenroot/: CMakeLists.txt  ConvertToGenroot_module.cc  GenrootRawEvent.cc  GenrootRawEvent.h
darkart/Display/: CMakeLists.txt  DisplayInputs_module.cc  ODWaveformGenerator_module.cc  TPCWaveformGenerator_module.cc
darkart/ODProducts/: CMakeLists.txt  ChannelData.hh  ChannelData_hh.d  ChannelWFs.hh  ChannelWFs_hh.d  Cluster.hh  Cluster.hh~  Cluster_hh.d  ODEventData.hh  ODEventData_hh.d  ODEventInfo.cc  ODEventInfo.hh  ODEventInfo_hh.d  ROI.hh  ROICfg.hh  ROICfg_hh.d  ROI_hh.d  RunInfo.hh  RunInfo_hh.d  Slider.hh  SliderCfg.hh  SliderCfg_hh.d  Slider_hh.d  SumWF.hh  SumWF_hh.d  TotalCharge.hh  TotalCharge_hh.d  classes.h  classes_def.xml
darkart/ODReco/: CMakeLists.txt  ClusterEvaluator_module.cc  ClusterFinder_module.cc  ODReaderChecker_module.cc  ODReader_source.cc  ODSpeFinder_module.cc  ODTreeBuilder_module.cc  ODViewer_module.cc  PulseCorrectorChecker_module.cc  PulseCorrector_module.cc  ROIIntegrator_module.cc  SliderFinder_module.cc  SumWaveformGeneratorChecker_module.cc  SumWaveformGenerator_module.cc  TotalChargeIntegrator_module.cc  Validator_module.cc
darkart/Products/: Baseline.hh  Baseline_hh.d  CMakeLists.txt  Channel.hh  Channel_hh.d  EventData.hh  EventData_hh.d  EventInfo.hh  EventInfo_hh.d  LaserSpectrum.hh  MCTruth.hh  PeCharge.hh  PeHit.hh  Pmt.hh  Pmt_hh.d  PositionParam.hh  PositionParam_hh.d  ProductAssns.hh  Pulse.hh  PulseParam.hh  PulseParam_hh.d  Pulse_hh.d  Roi.hh  Roi_hh.d  Spe.hh  Spe_hh.d  TDCCluster.hh  TDCCluster_hh.d  TDCHit.hh  VetoTruth.hh  Waveform.cc  Waveform.hh  WaveformInfo.hh  WaveformInfo_hh.d  classes.h  classes_def.xml
darkart/TpcMC/: CMakeLists.txt  G4DSReader_module.cc  MCConverter_module.cc  MCEventStructure.hh  MCTruthProducer_module.cc  MCWriter_module.cc  PeChargeGenerator.cc  PeChargeGenerator.hh  PeChargeMaker_module.cc  PeHitMaker_module.cc  PeTimeGenerator.cc  PeTimeGenerator.hh  SignalGenerator.cc  SignalGenerator.hh  SignalOverlay_module.cc  SignalOverlayer.cc  SignalOverlayer.hh  mcWaveform_module.cc  s2pulseshape_func.hh
darkart/TpcReco/: AverageWaveforms_module.cc  BaselineFinder_module.cc  ByChannel.hh  ByPulse.hh  CMakeLists.txt  ChannelHelper.hh  Converter_module.cc  EventPulseBuilder_module.cc  InEventlist_module.cc  Integrator_module.cc  LaserFit_module.cc  LaserSpectra_module.cc  ManyByChannel.hh  PhysPulseFinder_module.cc  PmtHelper.hh  PositionRecon_module.cc  PulseHelper.hh  PulseParameters_module.cc  RoiFinder_module.cc  RootGraphics.cc  RootGraphics.hh  Smoother_module.cc  SpeFinder_module.cc  (+28 more)
(+61 files in other folders)
