# cmake will automatically order the library builds according to declared dependencies
add_subdirectory (Products)
add_subdirectory (TpcReco)
add_subdirectory (TpcMC)
add_subdirectory (ArtModules)
add_subdirectory (ConvertToGenroot)
add_subdirectory (ODProducts)
add_subdirectory (ODReco)
add_subdirectory (Display)

